<resources>
    <string name="app_name">TalkTalk</string>

    <string name="loading">加载中..</string>
    <string name="register">注册</string>
    <string name="phoneNumberError">手机号码不能为空</string>
    <string name="passwordError">请设置登录密码</string>
    <string name="passwordLengthGreat6">密码长度设置在6~16之间</string>
    <string name="verifyCodeError">验证码不能为空</string>
    <string name="pick_user_icon">头像选择</string>

    <!--四个菜单功能-->
    <string name="main_talk">TT</string>
    <string name="main_contacts">通讯录</string>
    <string name="main_find">发现</string>
    <string name="main_me">我</string>
    <string name="send">发送</string>


    <string name="edit_user_image">更换头像</string>
    <string name="edit_user_nickname">昵称</string>
    <string name="edit_user_sex">性别</string>
    <string name="edit_user_signature">个性签名</string>

    <string name="verify_phone">验证手机</string>
    <string name="verify_email">验证邮箱</string>
    <string name="verify_password">修改密码</string>
    <string name="verify_about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="personal_info">个人信息</string>
    <string name="setting">设置</string>
    <string name="user_image_icon">头像</string>
    <string name="save">保存</string>
    <string name="tv_edit_user_name">修改昵称</string>
    <string name="tv_edit_user_signature">修改个性签名</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
</resources>
