<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_rl_click"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/user_info_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_phone" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sc_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:switchMinWidth="40dp"
                android:switchPadding="10dp"
                android:typeface="normal" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#44000000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_rl_click"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/user_info_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_email" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sc_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:switchMinWidth="40dp"
                android:switchPadding="10dp"
                android:typeface="normal" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#44000000" />

        <RelativeLayout
            android:id="@+id/rl_change_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_rl_click"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/user_info_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_password" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#44000000" />

        <RelativeLayout
            android:id="@+id/rl_about_us"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_rl_click"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/user_info_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_about_us" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#44000000" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/btn_style"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/logout" />
    </LinearLayout>
</LinearLayout>