<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_edit_user_image"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/bg_rl_click"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/user_info_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_user_image" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#44000000" />

        <RelativeLayout
            android:id="@+id/rl_edit_user_nickname"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/bg_rl_click"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/user_info_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_user_nickname" />

            <TextView
                android:id="@+id/tv_user_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="请叫我西西" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#44000000" />

        <RelativeLayout
            android:id="@+id/rl_edit_user_sex"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/bg_rl_click"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/user_info_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_user_sex" />

            <TextView
                android:id="@+id/tv_user_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="男" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#44000000" />

        <RelativeLayout
            android:id="@+id/rl_edit_user_signature"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/bg_rl_click"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/user_info_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_user_signature" />

            <TextView
                android:id="@+id/tv_user_signature"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:maxLength="32"
                android:maxLines="3"
                android:text="这是我的个性签名，还有谁能比我长？这是我的个性签名，还有谁能比我长？" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#44000000" />
    </LinearLayout>
</LinearLayout>