<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolbarTheme" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/ll_main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EEE"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/ll_main_talk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/iv_main_talk"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/main_talk_select" />

                <TextView
                    android:id="@+id/tv_main_talk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_main_talk"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/main_talk"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ll_main_contacts"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/iv_main_contacts"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/main_contacts_unselect" />

                <TextView
                    android:id="@+id/tv_main_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_main_contacts"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/main_contacts"
                    android:textColor="@color/main_gray"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ll_main_find"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/iv_main_find"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/main_find_unselect" />

                <TextView
                    android:id="@+id/tv_main_find"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_main_find"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/main_find"
                    android:textColor="@color/main_gray"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ll_main_me"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/iv_main_me"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/main_me_unselect" />

                <TextView
                    android:id="@+id/tv_main_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_main_me"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/main_me"
                    android:textColor="@color/main_gray"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
